--- a/sled_collections/templates/sled_collections/collection_delete.html
+++ b/sled_collections/templates/sled_collections/collection_delete.html
@@ -7,8 +7,10 @@ Delete collection
 
 
 {% block content %}
-<div class="jb-container">
-  Are you sure you want to delete the collection named <strong>{{ collection.name }}</strong>?
+<div class="jb-container-modal">
+  <p>
+    Are you sure you want to delete the collection named <strong>{{ collection.name }}</strong>?
+  </p>
 </div>
 {% endblock content %}
 
