--- a/sled_data/templates/sled_data/data_delete.html
+++ b/sled_data/templates/sled_data/data_delete.html
@@ -6,16 +6,24 @@ Delete {% singular_or_plural form.obj_type.value items|length %}?
 {% endblock title %}
 
 {% block content %}
-<div class="jb-modal-field">
-  <ul>
-    {% for item in items %}
-    <li>{{ item }}</li>
-    {% endfor %}
-  </ul>
-</div>
+<div class="jb-container-modal">
 
-{{ form.ids }}
-{{ form.obj_type }}
+  <div class="jb-modal-field jb-table-no-lines">
+    <table>
+      {% for item in items %}
+      <tr>
+	<td>
+          {{ item }}
+	</td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+  
+  {{ form.ids }}
+  {{ form.obj_type }}
+  
+</div>
 {% endblock content %}
 
 
