--- a/sled_data/templates/sled_data/imaging_delete.html
+++ b/sled_data/templates/sled_data/imaging_delete.html
@@ -7,7 +7,7 @@ Delete Imaging data
 
 
 {% block content %}
-<div class="jb-container">
+<div class="jb-container-modal">
   Are you sure you want to delete the imaging data taken by <strong>{{ imaging.instrument.name }}</strong> in the <strong>{{ imaging.band.name }}</strong> band for this lens?
 </div>
 {% endblock content %}
