--- a/sled_queries/templates/sled_queries/query_delete.html
+++ b/sled_queries/templates/sled_queries/query_delete.html
@@ -7,8 +7,10 @@ Delete query
 
 
 {% block content %}
-<div class="jb-modal-field">
-  Are you sure you want to delete the query named <strong>{{ query.name }}</strong>?
+<div class="jb-container-modal">
+  <p>
+    Are you sure you want to delete the query named <strong>{{ query.name }}</strong>?
+  </p>
 </div>
 {% endblock content %}
 
