--- a/sled_single_objects/templates/sled_single_objects/so_make_public.html
+++ b/sled_single_objects/templates/sled_single_objects/so_make_public.html
@@ -6,22 +6,34 @@ Make {% singular_or_plural form.obj_type.value items|length %} public?
 {% endblock title %}
 
 {% block content %}
-<div class="{% if form.non_field_errors %}invalid{% endif %}">
-  {% for error in form.non_field_errors %}
-  {{ error }}
-  {% endfor %}
-</div>
+<div class="jb-container-modal">
 
-<div>
-  <ul>
-    {% for item in items %}
-    <li>{{ item }}</li>
-    {% endfor %}
-  </ul>
-</div>
+  {% if form.non_field_errors|length > 0 %}
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.non_field_errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+  {% endif %}
+  
+  <div class="jb-modal-field jb-table-no-lines">
+    <table>
+      {% for item in items %}
+      <tr>
+	<td>
+          {{ item }}
+	</td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+  
+  {{ form.ids }}
+  {{ form.obj_type }}
 
-{{ form.ids }}
-{{ form.obj_type }}
+</div>
 {% endblock content %}
 
 
