--- a/sled_collections/templates/sled_collections/collection_cede_ownership.html
+++ b/sled_collections/templates/sled_collections/collection_cede_ownership.html
@@ -6,15 +6,19 @@ Cede ownership of collection {{ collection.name }}?
 
 
 {% block content %}
-<input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
+<div class="jb-container-modal">
+  
+  <input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
 
-<div class="jb-modal-field">
-
-  <div class="{% if form.non_field_errors %}invalid{% endif %}">
-    {% for error in form.non_field_errors %}
-    {{ error }}
-    {% endfor %}
+  {% if form.non_field_errors|length > 0 %}
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.non_field_errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
   </div>
+  {% endif %}
 
   <div class="jb-modal-field">
     {{ form.heir }}
