--- a/sled_collections/templates/sled_collections/collection_create.html
+++ b/sled_collections/templates/sled_collections/collection_create.html
@@ -1,24 +1,32 @@
 {% extends "modal_base.html" %}
 
 {% block title %}
-Make collection?
+Make a collection of {{ form.item_type.value }}?
 {% endblock title %}
 
 {% block content %}
-<div class="jb-container">
+<div class="jb-container-modal">
 
-  <div class="{% if form.non_field_errors %}invalid{% endif %}">
-    {% for error in form.non_field_errors %}
-    {{ error }}
-    {% endfor %}
-  </div>
-
-  <div>
+  {% if form.non_field_errors|length > 0 %}
+  <div class="invalid jb-modal-field">
     <ul>
-      {% for item in items %}
-      <li>{{ item }}</li>
+      {% for error in form.non_field_errors %}
+      <li>{{ error }}</li>
       {% endfor %}
     </ul>
+  </div>
+  {% endif %}
+  
+  <div class="jb-modal-field jb-table-no-lines">
+    <table>
+      {% for item in items %}
+      <tr>
+	<td>
+          {{ item }}
+	</td>
+      </tr>
+      {% endfor %}
+    </table>
   </div>
 
   <div class="jb-modal-field">
@@ -29,14 +37,14 @@ Make collection?
     {{ form.description }}
   </div>
 
-  <div>
+  <div class="jb-modal-field">
     {{ form.access_level }}
   </div>
 
-</div>
+  {{ form.item_type }}
+  {{ form.ids }}
 
-{{ form.item_type }}
-{{ form.ids }}
+</div>
 {% endblock content %}
 
 
