--- a/sled_collections/templates/sled_collections/collection_make_public.html
+++ b/sled_collections/templates/sled_collections/collection_make_public.html
@@ -7,16 +7,21 @@ Make collection {{ collection.name }} public?
 
 
 {% block content %}
-<div class="jb-modal-field">
-  <div class="{% if form.non_field_errors %}invalid{% endif %}">
-    {% for error in form.non_field_errors %}
-    {{ error|safe }}
-    {% endfor %}
+<div class="jb-container-modal">
+  
+  {% if form.non_field_errors|length > 0 %}
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.non_field_errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
   </div>
+  {% endif %}
 
-  <div>
+  <p>
     Are you sure you want to make this private collection public?
-  </div>
+  </p>
 </div>
 {% endblock content %}
 
