--- a/sled_data/templates/sled_data/imaging_create.html
+++ b/sled_data/templates/sled_data/imaging_create.html
@@ -5,14 +5,18 @@ Add Imaging data?
 {% endblock title %}
 
 {% block content %}
-<div class="jb-container">
+<div class="jb-container-modal">
   
-  <div class="{% if form.non_field_errors %}invalid{% endif %} jb-modal-field">
-    {% for error in form.non_field_errors %}
-    {{ error }}
-    {% endfor %}
+  {% if form.non_field_errors|length > 0 %}
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.non_field_errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
   </div>
-
+  {% endif %}
+		
   <div class="jb-modal-field jb-table-no-lines">
     {{ form.owner }}
     {{ form.lens }}
