--- a/sled_groups/templates/sled_groups/group_cede_ownership.html
+++ b/sled_groups/templates/sled_groups/group_cede_ownership.html
@@ -6,15 +6,20 @@ Cede ownership of group {{ sledgroup.name }}?
 
 
 {% block content %}
-<input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
+<div class="jb-container-modal">
 
-<div class="jb-modal-field">
-  <div class="{% if form.non_field_errors %}invalid{% endif %} jb-modal-field">
-    {% for error in form.non_field_errors %}
-    {{ error }}
-    {% endfor %}
+  <input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
+
+  {% if form.non_field_errors|length > 0 %}
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.non_field_errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
   </div>
-
+  {% endif %}
+  
   <div class="jb-modal-field">
     {{ form.heir }}
   </div>
@@ -22,6 +27,7 @@ Cede ownership of group {{ sledgroup.name }}?
   <div class="jb-modal-field">
     {{ form.justification }}
   </div>
+
 </div>
 {% endblock content %}
 
