--- a/sled_groups/templates/sled_groups/group_create.html
+++ b/sled_groups/templates/sled_groups/group_create.html
@@ -5,15 +5,20 @@ Create new group?
 {% endblock title %}
 
 {% block content %}
-<input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
+<div class="jb-container-modal">
 
-<div class="jb-modal-field">
-  <div class="{% if form.non_field_errors %}invalid{% endif %}">
-    {% for error in form.non_field_errors %}
-    {{ error }}
-    {% endfor %}
+  <input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
+
+  {% if form.non_field_errors|length > 0 %}
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.non_field_errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
   </div>
-
+  {% endif %}
+  
   <div class="jb-modal-field">
     {{ form.name }}
   </div>
@@ -29,6 +34,7 @@ Create new group?
   <div class="jb-modal-field">
     {{ form.access_level }}
   </div>
+
 </div>
 {% endblock content %}
 
