--- a/static/css/jb_style.css
+++ b/static/css/jb_style.css
@@ -535,3 +535,23 @@ table td {
     min-width: 130px;
     text-align:right;
 }
+
+
+.jb-container-modal {
+    margin: auto;
+    max-width: 1100px;
+    font-family: basic-sans, sans-serif;
+}
+
+.invalid ul {
+    list-style-position: outside;
+    padding-left: 20px;
+    color: red;
+}
+
+ul.jb-select-radio {
+    list-style-type: none;
+    padding: 0px;
+}
+
+
