--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -435,7 +435,7 @@
 	     <img src="{% static 'icons/forward-fill.svg' %}" alt="arrow">
 	     Cede ownership
 	   </button>
-	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'sled_data:data-delete' %}">
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'sled_data:data-delete-many' %}">
 	     <img src="{% static 'icons/trash.svg' %}" alt="trash">
 	     Delete
 	   </button>
@@ -451,6 +451,244 @@
      </div>
    </div>
 
+
+
+
+
+   <div class="c">
+     <input class="accordion-checkbox" type="checkbox" id="spectra">
+     <h1 class="jb-heading-2">
+       <label for="spectra">
+	 My Spectrum data ({{ N_spectra_total }})
+       </label>
+     </h1>
+     <div class="p">
+       <br>
+       {% if user.is_superuser %}
+       <p>
+	 The adming owns all the automatically fetched data, which are too many to display here.
+	 Instead, if the admin needs to update or delete data then they can do it at each lens detail page.
+       </p>
+       {% else %}
+       
+       {% if spectra|length == 0 %}
+       No Spectrum data owned
+       {% else %}
+       <form id="spectrum-form" class="ids-form" method="POST">
+         {% csrf_token %}
+	 
+	 <div>
+	   {% include "pagination_top.html" with qset=spectra request=request qset_range=spectra_range qset_total=N_spectra_total target="spectra" %}
+
+	   <input name="obj_type" type="hidden" value="Spectrum" />
+	   <table>
+	     <thead>
+	       <tr>
+		 <th></th>
+		 <th></th>
+		 <th>Lens</th>
+		 <th>Instrument</th>
+		 <th>Date taken</th>
+		 <th>Access level</th>
+		 <th>Accessible by</th>
+		 <th></th>
+	       </tr>
+	     </thead>
+	     <tbody>
+	       {% for spectrum in spectra %}
+	       <tr>
+		 <td><input name="ids" type="checkbox" value="{{ spectrum.id }}"></td>
+		 <td style="text-align:center" valign="'middle">
+		   {% if spectrum.future %}
+		   Future
+		   {% else %}
+		   <img class="sled-mugshot-icon" src="{{ spectrum.image.url }}">
+		   {% endif %}
+		 </td>
+		 <td><a href="{{ spectrum.lens.get_absolute_url }}">{{ spectrum.lens.name }}</a></td>
+		 <td>{{ spectrum.instrument.name }}</td>
+		 <td>{{ spectrum.date_taken }}</td>
+		 <td>{{ spectrum.access_level }}</td>
+		 <td>
+		   {{ spectrum.getUsersWithAccessNoOwner|join:"," }} - <em>{{ spectrum.getGroupsWithAccessNoOwner|join:"," }}</em>
+		 </td>
+		 <td>
+		   <button type="button" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_data:spectrum-detail' spectrum.id %}">
+		     View
+		     <img src="{% static 'icons/eye-fill.svg' %}" alt="people">
+		   </button>
+		 </td>
+	       </tr>
+	       {% endfor %}
+	   </table>
+	   <button type="button" class="sled-toggle-all btn btn-sm btn-light" value="select">Toggle select all</button>
+	 </div>	 
+	 {% include "pagination_bottom.html" with qset=spectra request=request qset_range=spectra_range qset_total=N_spectra_total target="spectra" %}
+
+	 <div>
+	   <button type="submit" class="jb-submit-button-1" form="spectrum-form" formaction="{% url 'sled_data:data-update-many' %}">
+	     <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
+	     Update
+	   </button>
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'so:so-revoke-access' %}">
+	     <img src="{% static 'icons/person-dash-fill.svg' %}" alt="person minus">
+	     Revoke access
+	   </button>
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'so:so-give-access' %}">
+	     <img src="{% static 'icons/person-plus-fill.svg' %}" alt="person plus">
+	     Give access
+	   </button>
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'so:so-make-public' %}">
+	     <img src="{% static 'icons/people-fill.svg' %}" alt="people">
+	     Make public
+	   </button>
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'so:so-make-private' %}">
+	     <img src="{% static 'icons/lock-fill.svg' %}" alt="lock">
+	     Make private
+	   </button>
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'so:so-cede-ownership' %}">
+	     <img src="{% static 'icons/forward-fill.svg' %}" alt="arrow">
+	     Cede ownership
+	   </button>
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'sled_data:data-delete-many' %}">
+	     <img src="{% static 'icons/trash.svg' %}" alt="trash">
+	     Delete
+	   </button>
+	 </div>
+
+       </form>
+       {% endif %}
+       <br>
+       <br>
+       
+       {% endif %}
+       <br>
+     </div>
+   </div>
+
+
+
+
+
+   <div class="c">
+     <input class="accordion-checkbox" type="checkbox" id="catalogues">
+     <h1 class="jb-heading-2">
+       <label for="catalogues">
+	 My Catalogue data ({{ N_catalogues_total }})
+       </label>
+     </h1>
+     <div class="p">
+       <br>
+       {% if user.is_superuser %}
+       <p>
+	 The adming owns all the automatically fetched data, which are too many to display here.
+	 Instead, if the admin needs to update or delete data then they can do it at each lens detail page.
+       </p>
+       {% else %}
+       
+       {% if catalogues|length == 0 %}
+       No Catalogue data owned
+       {% else %}
+       <form id="catalogue-form" class="ids-form" method="POST">
+         {% csrf_token %}
+	 
+	 <div>
+	   {% include "pagination_top.html" with qset=catalogues request=request qset_range=catalogues_range qset_total=N_catalogues_total target="catalogues" %}
+
+	   <input name="obj_type" type="hidden" value="Catalogue" />
+	   <table>
+	     <thead>
+	       <tr>
+		 <th></th>
+		 <th></th>
+		 <th>Lens</th>
+		 <th>Instrument</th>
+		 <th>Band</th>
+		 <th>Date taken</th>
+		 <th>Access level</th>
+		 <th>Accessible by</th>
+		 <th></th>
+	       </tr>
+	     </thead>
+	     <tbody>
+	       {% for catalogue in catalogues %}
+	       <tr>
+		 <td><input name="ids" type="checkbox" value="{{ spectrum.id }}"></td>
+		 <td style="text-align:center" valign="'middle">
+		   {% if catalogue.future %}
+		   Future
+		   {% else %}
+		   &nbsp;
+		   {% endif %}
+		 </td>
+		 <td><a href="{{ catalogue.lens.get_absolute_url }}">{{ catalogue.lens.name }}</a></td>
+		 <td>{{ catalogue.instrument.name }}</td>
+		 <td>{{ catalogue.band.name }}</td>
+		 <td>{{ catalogue.date_taken }}</td>
+		 <td>{{ catalogue.access_level }}</td>
+		 <td>
+		   {{ catalogue.getUsersWithAccessNoOwner|join:"," }} - <em>{{ catalogue.getGroupsWithAccessNoOwner|join:"," }}</em>
+		 </td>
+		 <td>
+		   <button type="button" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_data:catalogue-detail' catalogue.id %}">
+		     View
+		     <img src="{% static 'icons/eye-fill.svg' %}" alt="people">
+		   </button>
+		 </td>
+	       </tr>
+	       {% endfor %}
+	   </table>
+	   <button type="button" class="sled-toggle-all btn btn-sm btn-light" value="select">Toggle select all</button>
+	 </div>	 
+	 {% include "pagination_bottom.html" with qset=catalogues request=request qset_range=catalogues_range qset_total=N_catalogues_total target="catalogues" %}
+
+	 <div>
+	   <button type="submit" class="jb-submit-button-1" form="catalogue-form" formaction="{% url 'sled_data:data-update-many' %}">
+	     <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
+	     Update
+	   </button>
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'so:so-revoke-access' %}">
+	     <img src="{% static 'icons/person-dash-fill.svg' %}" alt="person minus">
+	     Revoke access
+	   </button>
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'so:so-give-access' %}">
+	     <img src="{% static 'icons/person-plus-fill.svg' %}" alt="person plus">
+	     Give access
+	   </button>
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'so:so-make-public' %}">
+	     <img src="{% static 'icons/people-fill.svg' %}" alt="people">
+	     Make public
+	   </button>
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'so:so-make-private' %}">
+	     <img src="{% static 'icons/lock-fill.svg' %}" alt="lock">
+	     Make private
+	   </button>
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'so:so-cede-ownership' %}">
+	     <img src="{% static 'icons/forward-fill.svg' %}" alt="arrow">
+	     Cede ownership
+	   </button>
+	   <button type="button" class="sled-process-ids jb-submit-button-1" data-form-url="{% url 'sled_data:data-delete-many' %}">
+	     <img src="{% static 'icons/trash.svg' %}" alt="trash">
+	     Delete
+	   </button>
+	 </div>
+
+       </form>
+       {% endif %}
+       <br>
+       <br>
+       
+       {% endif %}
+       <br>
+     </div>
+   </div>
+
+
+
+   
+
+
+   
  </div>
   
 </div>
