Added a missing entry in the 'installed apps' and a comment for the 'which_database' option.

--- a/sled_data/templates/sled_data/imaging_detail.html
+++ b/sled_data/templates/sled_data/imaging_detail.html
@@ -7,7 +7,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="jb-container jb-table-no-lines" style="padding-bottom:0">
+<div class="jb-container jb-table-no-lines">
   
   <table>
     <tr><td>Owner:</td><td>{{ imaging.owner }}</td></tr>
