--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -613,7 +613,7 @@
 	     <tbody>
 	       {% for catalogue in catalogues %}
 	       <tr>
-		 <td><input name="ids" type="checkbox" value="{{ spectrum.id }}"></td>
+		 <td><input name="ids" type="checkbox" value="{{ catalogue.id }}"></td>
 		 <td style="text-align:center" valign="'middle">
 		   {% if catalogue.future %}
 		   Future
